fixed images overflowing on small screens

--- a/src/styles/portfolio/PortfolioPage.scss
+++ b/src/styles/portfolio/PortfolioPage.scss
@@ -32,6 +32,12 @@
     }
 }
 
+@media screen and (max-width: 1100px) {
+    .photo-item {
+        width: 90vw;
+    }
+}
+
 @media screen and (max-width: 750px) {
     .portfolio-preview {
         height: fit-content;
